--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,8 @@
 
 # dependencies
 /node_modules
-/backend/node_modules
+/client/node_modules
+/server/node_modules
 /.pnp
 .pnp.js
 
@@ -13,7 +14,7 @@
 /build
 
 # Server/backend
-backend/secrets.js
+server/secrets.js
 
 # TypeScript v1 declaration files
 typings/
