--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "shop",
   "version": "1.0.0",
   "description": "An e-commerce website built with the MERN stack.",
-  "main": "server.js",
+  "main": "server.ts",
   "scripts": {
     "start": "concurrently \"npm run client\" \"npm run server\"",
     "start:nowatch": "concurrently \"npm run client\" \"npm run server:nowatch\"",
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "concurrently": "^5.3.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
