--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     "client": "cd client && npm start"
   },
   "keywords": [],
-  "author": "",
+  "author": "Forrest Wilkins",
   "license": "ISC",
   "dependencies": {
-    "bcryptjs": "^2.4.3",
+    "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "concurrently": "^5.3.0",
     "cors": "^2.8.5",
@@ -24,6 +24,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.18",
     "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
     "validator": "^13.5.1"
   },
   "devDependencies": {
