--- a/client/package.json
+++ b/client/package.json
@@ -49,5 +49,6 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10"
-  }
+  },
+  "proxy": "http://localhost:5000/"
 }
