TS removed from server

--- a/client/package.json
+++ b/client/package.json
@@ -1,7 +1,5 @@
 {
-  "name": "shop",
-  "version": "0.1.0",
-  "private": true,
+  "name": "client",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
