--- a/package.json
+++ b/package.json
@@ -2,17 +2,17 @@
   "name": "shop",
   "version": "1.0.0",
   "description": "An e-commerce website built with the MERN stack.",
-  "main": "server.ts",
+  "main": "server.js",
   "scripts": {
     "start": "concurrently \"npm run client\" \"npm run server\"",
     "start:nowatch": "concurrently \"npm run client\" \"npm run server:nowatch\"",
-    "server": "cd server && nodemon server.ts",
-    "server:nowatch": "cd server && node server.ts",
+    "server": "cd server && nodemon server.js",
+    "server:nowatch": "cd server && node server.js",
     "client": "cd client && npm start"
   },
   "keywords": [],
   "author": "Forrest Wilkins",
-  "license": "ISC",
+  "license": "GPL-3.0",
   "dependencies": {
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
@@ -27,15 +27,5 @@
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "validator": "^13.5.1"
-  },
-  "devDependencies": {
-    "@types/express": "^4.17.9",
-    "@types/jest": "^26.0.16",
-    "@types/node": "^14.14.10",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
-    "ts-node": "^9.1.1",
-    "tslint": "^6.1.3",
-    "typescript": "^4.1.2"
   }
 }
