--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "multer": "^1.4.2",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
+    "stripe": "^8.129.0",
     "validator": "^13.5.1"
   }
 }
