--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^4.5.3",
     "classnames": "^2.2.6",
     "jwt-decode": "^3.1.2",
+    "next": "^10.0.4",
     "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
