--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "shop",
   "version": "1.0.0",
   "description": "An e-commerce website built with Next.js",
+  "main": "index.js",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -17,7 +18,6 @@
     "@material-ui/icons": "^4.11.2",
     "@stripe/react-stripe-js": "^1.1.2",
     "@stripe/stripe-js": "^1.11.0",
-    "stripe": "^8.129.0",
     "axios": "^0.21.1",
     "bcrypt": "^5.0.0",
     "bootstrap": "^4.5.3",
@@ -33,6 +33,7 @@
     "react": "17.0.1",
     "react-bootstrap": "^1.4.0",
     "react-dom": "17.0.1",
+    "stripe": "^8.129.0",
     "validator": "^13.5.2",
     "zustand": "^3.2.0"
   }
