--- a/package.json
+++ b/package.json
@@ -11,23 +11,23 @@
   "author": "Forrest Wilkins",
   "license": "GPL-3.0",
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.32",
-    "@fortawesome/free-solid-svg-icons": "^5.15.1",
-    "@fortawesome/react-fontawesome": "^0.1.14",
+    "@apollo/client": "^3.3.7",
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
     "@stripe/react-stripe-js": "^1.1.2",
     "@stripe/stripe-js": "^1.11.0",
+    "apollo-server-micro": "^2.19.2",
+    "apollo-upload-client": "^14.1.3",
     "axios": "^0.21.1",
     "bcrypt": "^5.0.0",
     "bootstrap": "^4.5.3",
     "classnames": "^2.2.6",
-    "formidable": "^1.2.2",
+    "graphql-tag": "^2.11.0",
+    "graphql-tools": "^7.0.2",
     "is-empty": "^1.2.0",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^3.1.2",
     "mongoose": "^5.11.9",
-    "multer": "^1.4.2",
     "next": "10.0.4",
     "node-sass": "^5.0.0",
     "prop-types": "^15.7.2",
@@ -37,5 +37,8 @@
     "stripe": "^8.129.0",
     "validator": "^13.5.2",
     "zustand": "^3.2.0"
+  },
+  "resolutions": {
+    "fs-capacitor": "^6.2.0"
   }
 }
