--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@apollo/client": "^3.3.7",
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
+    "@prisma/client": "^2.14.0",
     "@stripe/react-stripe-js": "^1.1.2",
     "@stripe/stripe-js": "^1.11.0",
     "apollo-server-micro": "^2.19.2",
@@ -27,7 +28,6 @@
     "is-empty": "^1.2.0",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^3.1.2",
-    "mongoose": "^5.11.9",
     "next": "10.0.4",
     "node-sass": "^5.0.0",
     "prop-types": "^15.7.2",
@@ -40,5 +40,11 @@
   },
   "resolutions": {
     "fs-capacitor": "^6.2.0"
+  },
+  "devDependencies": {
+    "@prisma/cli": "^2.14.0"
+  },
+  "prisma": {
+    "schema": "src/prisma/schema.prisma"
   }
 }
