--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@prisma/client": "^2.14.0",
     "@stripe/react-stripe-js": "^1.1.2",
     "@stripe/stripe-js": "^1.11.0",
+    "apollo-cache-inmemory": "^1.6.6",
     "apollo-server-micro": "^2.19.2",
     "apollo-upload-client": "^14.1.3",
     "axios": "^0.21.1",
@@ -35,8 +36,7 @@
     "react-bootstrap": "^1.4.0",
     "react-dom": "17.0.1",
     "stripe": "^8.129.0",
-    "validator": "^13.5.2",
-    "zustand": "^3.2.0"
+    "validator": "^13.5.2"
   },
   "resolutions": {
     "fs-capacitor": "^6.2.0"
