--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "shop",
   "version": "1.0.0",
-  "description": "An e-commerce website built with Next.js",
-  "main": "index.js",
+  "description": "An E-commerce site built with Next.js, Apollo GraphQL, and Prisma",
+  "main": "index.tsx",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -24,6 +24,7 @@
     "bcrypt": "^5.0.0",
     "bootstrap": "^4.5.3",
     "classnames": "^2.2.6",
+    "graphql": "^15.5.0",
     "graphql-tag": "^2.11.0",
     "graphql-tools": "^7.0.2",
     "is-empty": "^1.2.0",
@@ -31,7 +32,6 @@
     "jwt-decode": "^3.1.2",
     "next": "10.0.4",
     "node-sass": "^5.0.0",
-    "prop-types": "^15.7.2",
     "react": "17.0.1",
     "react-bootstrap": "^1.4.0",
     "react-dom": "17.0.1",
